--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,8 +1,8 @@
-{% extends "base.html.twig" %}
+{% extends "@AdsAdverts/layout/base.html.twig" %}
 
 {% block body %}
     {{ include('@FOSUser/Security/login_content.html.twig') }}
 {% endblock body %}
 {% block footer %}
-    {% include 'pages/inc/footer.html.twig' %}
+    {% include '@AdsAdverts/layout/inc/footer.html.twig' %}
 {% endblock %}
