--- a/src/Ads/AdvertsBundle/Resources/views/Annonce/addannonce.html.twig
+++ b/src/Ads/AdvertsBundle/Resources/views/Annonce/addannonce.html.twig
@@ -9,7 +9,7 @@
         {{ form_widget(form.idcategorie) }}
     {{ form_end(form) }}#}
 
-<div class="row">
+<div class="row" style="margin-top: 20px">
     <div class="col-md-10 offset-1">
 
         <div class="modal-content">
