--- a/src/Ads/AdvertsBundle/Resources/views/Main/main.html.twig
+++ b/src/Ads/AdvertsBundle/Resources/views/Main/main.html.twig
@@ -287,7 +287,9 @@
 {% block scripts %}
     <script>
 
-
+        $('.hidde').click(function() {
+            $('.toclose').modal('hide');
+        });
         {#$( document ).ready(function(){#}
         {#getEmploi()#}
         {#var offset = 0;#}
