--- a/src/Ads/AdvertsBundle/Resources/views/Annonce/allmyads.html.twig
+++ b/src/Ads/AdvertsBundle/Resources/views/Annonce/allmyads.html.twig
@@ -6,7 +6,7 @@
     <table class="table table-borderless table-hover separation">
         <thead>
 
-        </thead>
+  </thead>
         <tbody>{% if app.user is not empty and myannonces is empty %}
             <h2>Vous n'avais publié aucune annonce</h2>
 
@@ -29,12 +29,12 @@
                             <div class="col-md-2">{{ affiche.datepub|date("m/d/Y")}}</div>
                             <div class="col-md-2">{% if affiche.etat ==0 %}En cours...{% else %}accompli{% endif %}</div>
                             <div class="col-md-"2>
-                                <p>Categorie {{ affiche.Idcategorie.getNomcate() }}</p>
+                                <p>{{ affiche.Idcategorie.getNomcate() }}</p>
                             </div>
                             <div class="col-md-1">
                                <button class="btn rondeur"> <a href="{{ path('delete_annonce',{id:affiche.id}) }}" onclick="confirm('Etes vous sure de vouloir le supprimer ?');">Supprimer</a>
                                </button>
-                                <button class="btn rondeur"><a href="#">Modifier</a></button>
+                                <button class="btn rondeur"><a href="{{ path('updateit',{id:affiche.id}) }}">Modifier</a></button>
                             </div>
 
 
