--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -23,7 +23,7 @@
                 {% endif %}
                 <div class="md-form">
                     <i class="fa fa-envelope prefix grey-text"></i>
-                <input class="form-control" type="email" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
+                <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
                     <label for="username">{{ 'security.login.username'|trans }}</label>
 
                 </div>
