--- a/src/Ads/AdvertsBundle/Resources/views/layout/base.html.twig
+++ b/src/Ads/AdvertsBundle/Resources/views/layout/base.html.twig
@@ -12,7 +12,7 @@
         {# fin ccs de MDB#}
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"  rel="stylesheet">
         {# my css#}
-        <link rel="stylesheet" href="/css/mystyle.css">
+        <link rel="stylesheet" href="{{ asset('bundles/app/css/mystyle.css') }}">
     {% endblock %}
 </head>
     <body>
