--- a/src/Ads/AdvertsBundle/Resources/views/Main/main.html.twig
+++ b/src/Ads/AdvertsBundle/Resources/views/Main/main.html.twig
@@ -13,20 +13,20 @@
             </ul>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/food.jpeg" alt="Los Angeles" width="1100" height="500">
+                    <img src="{{ asset('bundles/app/images/food.jpeg') }}" alt="Los Angeles" width="1100" height="500">
                     <div class="carousel-caption">
                         <h1 class="textcentral">Los Angeles We had such <br>a great time in LA</h1>
 
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/fashion.jpeg" alt="Chicago" width="1100" height="500">
+                    <img src="{{ asset('bundles/app/images/fashion.jpeg') }}" alt="Chicago" width="1100" height="500">
                     <div class="carousel-caption ">
                         <h1 class="textcentral">Chicago Thank you, Chicago!</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/cars.jpeg" alt="New York" width="1100" height="500">
+                    <img src="{{ asset('bundles/app/images/cars.jpeg') }}" alt="New York" width="1100" height="500">
                     <div class="carousel-caption">
                         <h1 class="textcentral">We love the Big Apple!</h1>
                     </div>
@@ -204,27 +204,27 @@
     <div class="separation">
         <div class="row text-center nav justify-content-center">
             <div class="">
-                <img src="images/cars.jpeg" width="120" height="120" style="border-radius: 100%;"><br>
+                <img src="{{ asset('bundles/app/images/cars.jpeg') }}" width="120" height="120" style="border-radius: 100%;"><br>
                 <a href="{{ path('all_',{'categ':'fashion'}) }}">Fashion</a>
             </div>
             <div class="">
-                <img src="images/cars.jpeg" width="120" height="120" style="border-radius: 100%;"><br>
+                <img src="{{ asset('bundles/app/images/cars.jpeg') }}" width="120" height="120" style="border-radius: 100%;"><br>
                 <a href="{{ path('all_',{'categ':'informatique'}) }}">Informatique</a>
             </div>
             <div class="offset-1">
-                <img src="images/fashion.jpeg" width="120" height="120" style="border-radius: 100%"><br>
+                <img src="{{ asset('bundles/app/images/fashion.jpeg') }}" width="120" height="120" style="border-radius: 100%"><br>
                 <a href="{{ path('all_',{'categ':'maison'}) }}">Maison</a></div>
             <div class="">
-                <img src="images/cars.jpeg" width="120" height="120" style="border-radius: 100%;"><br>
+                <img src="{{ asset('bundles/app/images/cars.jpeg') }}" width="120" height="120" style="border-radius: 100%;"><br>
                 <a href="{{ path('all_',{'categ':'emploi'}) }}">Service</a>
             </div>
             <div class="">
-                <img src="images/fashion.jpeg" width="120" height="120" style="border-radius: 100%"><br>
+                <img src="{{ asset('bundles/app/images/fashion.jpeg') }}" width="120" height="120" style="border-radius: 100%"><br>
                 <a href="{{ path('all_',{'categ':'equipement'}) }}">Equipement</a></div>
-            <div class="offset-1"><img src="images/cars.jpeg" width="120" height="120" style="border-radius: 100%"><br>
+            <div class="offset-1"><img src="{{ asset('bundles/app/images/cars.jpeg') }}" width="120" height="120" style="border-radius: 100%"><br>
                 <a href="{{ path('all_',{'categ':'immobilier'}) }}">Immobilier</a></div>
             <div class="">
-                <img src="images/food.jpeg" width="120" height="120" style="border-radius: 100%"><br>
+                <img src="{{ asset('bundles/app/images/food.jpeg') }}" width="120" height="120" style="border-radius: 100%"><br>
                 <a href="{{ path('all_',{'categ':'evenement'}) }}">Evenement</a>
             </div>
         </div>
